--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "dotenv node index.js"
+    "start": "dotenv node index.js",
+    "test": "jest"
   },
   "dependencies": {
     "dotenv": "^5.0.1",
+    "folktale": "^2.1.0",
+    "jest": "^22.4.4",
     "koa": "^2.5.1",
     "koa-router": "^7.4.0",
     "node-fetch": "^2.1.2",
